package edu.masanz.da.lp;

/**
 * Clase principal para ejecutar la aplicación de gestión de ligas de paddle.
 */
public class Main {

    public static void main(String[] args) {
        // TODO 01: instancia la clase App y llama al método run.


    }

}
